--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html data-wf-page="611d0d9b752438d09b44e08e" data-wf-site="611d0d9b752438eba744e08d">
+
 <head>
    <meta charset="utf-8">
    <title>Tiny Birds</title>
@@ -111,7 +112,7 @@
             </div>
          </div>
          <div id="mint-buttons" style="text-align: center;"  class="hidden">
-            <button id="mint-button" class="button hidden" onclick="mint()">MINT</button>
+            <button id="mint-button" class="button" onclick="mint()">MINT</button>
          </div>
       </div>
       <img src="images/birdgif1.gif" class="mint-img hide-on-mobile" style="margin-left:2%;">
