--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             </div>
          </div>
-         <div id="mint-buttons" style="text-align: center;"  class="hidden">
+         <div id="mint-buttons" style="text-align: center;">
             <button id="mint-button" class="button" onclick="mint()">MINT</button>
          </div>
       </div>
