--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
    <meta charset="utf-8">
-   <title>Tiny Birds</title>
-   <meta content="4444 Tiny Birds nesting on the Ethereum blockchain." name="description">
-   <meta content="Tiny Birds" property="og:title">
-   <meta content="4444 Tiny Birds nesting on the Ethereum blockchain." property="og:description">
+   <title>Tiny Moonbirds</title>
+   <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only." name="description">
+   <meta content="Tiny Moonirds" property="og:title">
+   <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only." property="og:description">
    <meta content="Tiny Birds" property="twitter:title">
-   <meta content="4444 Tiny Birds nesting on the Ethereum blockchain." property="twitter:description">
+   <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only." property="twitter:description">
    <meta property="og:type" content="website">
    <meta property="og:image" content="https://github.com/saintmaxi/tiny-birds/blob/main/images/tinybird.png?raw=true">
    <meta property="og:image:width" content="300">
@@ -30,7 +30,7 @@
    <div id="top">
       <div id="title-section" class="header">
          <div id="title">
-            TINY BIRDS
+            TINY MOONBIRDS
          </div>
       </div>
       <div id="header" class="header hide-on-mobile">
@@ -76,8 +76,8 @@
       <img src="images/birdgif2.gif" class="mint-img hide-on-mobile" style="margin-right:2%;">
       <div id="mint" class="container w-container box">
          <div id="mint-tools">
-            <h1 style="text-align: center;">MINT TINY BIRDS</h1>
-            <h2 style="text-align: center;" class="heading">First 1000 free, remaining 0.0025 Ξ</h2>
+            <h1 style="text-align: center;">MINT TINY MOONBIRDS</h1>
+            <h2 style="text-align: center;" class="heading">First 1000 free, remaining 0.0025 Ξ. Vibes only.</h2>
             <div class="modal-info">
                <h2 class="heading">Minted</h2>
                <h2 id="mintedCount" class="heading"><span id="num-minted">-</span>/4444</h2>
