--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
    <meta charset="utf-8">
    <title>Tiny Moonbirds</title>
    <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only." name="description">
-   <meta content="Tiny Moonirds" property="og:title">
+   <meta content="Tiny Moonbirds" property="og:title">
    <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only." property="og:description">
-   <meta content="Tiny Birds" property="twitter:title">
+   <meta content="Tiny Moonbirds" property="twitter:title">
    <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only." property="twitter:description">
    <meta property="og:type" content="website">
    <meta property="og:image" content="https://github.com/saintmaxi/tiny-birds/blob/main/images/tinybird.png?raw=true">
