--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
    <meta charset="utf-8">
-   <title>Tiny MoonBirds</title>
-   <meta content="4444 Tiny MoonBirds nesting on the Ethereum blockchain. Vibes only. First 1000 free, remaining 0.0025 Ξ each." name="description">
-   <meta content="Tiny MoonBirds" property="og:title">
-   <meta content="4444 Tiny MoonBirds nesting on the Ethereum blockchain. Vibes only. First 1000 free, remaining 0.0025 Ξ each." property="og:description">
-   <meta content="Tiny MoonBirds" property="twitter:title">
-   <meta content="4444 Tiny MoonBirds nesting on the Ethereum blockchain. Vibes only. First 1000 free, remaining 0.0025 Ξ each." property="twitter:description">
+   <title>Tiny Moonbirds</title>
+   <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only. First 1000 free, remaining 0.0025 Ξ each." name="description">
+   <meta content="Tiny Moonbirds" property="og:title">
+   <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only. First 1000 free, remaining 0.0025 Ξ each." property="og:description">
+   <meta content="Tiny Moonbirds" property="twitter:title">
+   <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only. First 1000 free, remaining 0.0025 Ξ each." property="twitter:description">
    <meta property="og:type" content="website">
    <meta property="og:image" content="https://github.com/saintmaxi/tiny-birds/blob/main/images/tinybird.png?raw=true">
    <meta property="og:image:width" content="300">
