--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
    <meta charset="utf-8">
    <title>Tiny Moonbirds</title>
+   <meta name="twitter:card" content="summary_large_image">
    <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only. First 1000 free, remaining 0.0025 Ξ each." name="description">
    <meta content="Tiny Moonbirds" property="og:title">
    <meta content="4444 Tiny Moonbirds nesting on the Ethereum blockchain. Vibes only. First 1000 free, remaining 0.0025 Ξ each." property="og:description">
