--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
          <a href="#" target="_blank" class="link w-inline-block">
             <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
          </a>
-         <a href="#" target="_blank" class="link w-inline-block">
+         <a href="https://looksrare.org/collections/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link w-inline-block">
             <img src="images/looks-black.png" loading="lazy" alt="" style="border-radius: 50%;">
          </a>
-         <a href="#" target="_blank" class="link w-inline-block">
+         <a href="https://etherscan.io/address/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link w-inline-block">
             <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="background-color: black;border-radius: 50%;">
          </a>
       </div>
@@ -62,10 +62,10 @@
                <a href="#" target="_blank" class="link w-inline-block">
                   <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
                </a>
-               <a href="#" target="_blank" class="link w-inline-block">
+               <a href="https://looksrare.org/collections/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link w-inline-block">
                   <img src="images/looks-black.png" loading="lazy" alt="" style="border-radius: 50%;">
                </a>
-               <a href="#" target="_blank" class="link w-inline-block">
+               <a href="https://etherscan.io/address/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link w-inline-block">
                   <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="background-color: black;border-radius: 50%;">
                </a>
             </div>
@@ -125,10 +125,10 @@
                <a href="#" target="_blank" class="link">
                   <img src="images/os-transparent.png" loading="lazy" alt="">
                </a>
-               <a href="#" target="_blank" class="link">
+               <a href="https://looksrare.org/collections/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link">
                   <img src="images/looks-black.png" loading="lazy" alt="" style="border-radius: 50%;">
                </a>
-               <a href="#" target="_blank" class="link w-inline-block">
+               <a href="https://etherscan.io/address/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link w-inline-block">
                   <img class="etherscan" src="images/etherscan-white.png" loading="lazy" alt="" style="border-radius: 50%;">
                </a>
             </div>
