--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id="header" class="header hide-on-mobile">
       </div>
       <div class="hide-on-mobile" id="socials">
-         <a href="#" target="_blank" class="link w-inline-block">
+         <a href="https://opensea.io/collection/tinybirdsofficial" target="_blank" class="link w-inline-block">
             <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
          </a>
          <a href="https://looksrare.org/collections/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link w-inline-block">
@@ -59,7 +59,7 @@
             <div id="header" class="header hide-on-desktop">
             </div>
             <div class="hide-on-desktop" id="socials" style="text-align: center;">
-               <a href="#" target="_blank" class="link w-inline-block">
+               <a href="https://opensea.io/collection/tinybirdsofficial" target="_blank" class="link w-inline-block">
                   <img src="images/os-transparent.png" loading="lazy" alt="" style="background-color: transparent;border-radius: 50%;">
                </a>
                <a href="https://looksrare.org/collections/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link w-inline-block">
@@ -122,7 +122,7 @@
       <div class="section body-section footer wf-section">
          <div class="container w-container footer-section">
             <div id="bottom-socials">
-               <a href="#" target="_blank" class="link">
+               <a href="https://opensea.io/collection/tinybirdsofficial" target="_blank" class="link">
                   <img src="images/os-transparent.png" loading="lazy" alt="">
                </a>
                <a href="https://looksrare.org/collections/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="link">
