--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
             </div>
             <div>
                <div style="text-align: center;">
-                  <h2 id="sold-out"></h2>
+                  <h2 id="sold-out">
+                  SOLD OUT. <br><br>AVAILABLE ON <a href="https://opensea.io/collection/tinybirdsofficial" target="_blank" class="w-inline-block" style="text-decoration:none;color:blue;">OPENSEA⬈</a> & <a href="https://looksrare.org/collections/0xE8e5b486316C78469255681671b6A130D65E3578" target="_blank" class="w-inline-block" style="text-decoration:none;color:green;">LOOKSRARE⬈</a>
+                  
+                  
+                  </h2>
                </div>
             <img id="bird-banner" src="images/banner.png">
 
